<resources>
    <string name="app_name">SPINDIE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>

    <string name="google_button">Sign in with google</string>

    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="music">Music</string>

    <string name="tittle">Tittle</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>

    <string name="chapter1">Chapter 1</string>
    <string name="chapter2">Chapter 2</string>
    <string name="zero">0:00</string>


</resources>