<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        android:onClick="goToHome"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        android:onClick="goToSearch"/>
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more"
        android:title="@string/more"
        android:onClick="goToMore"/>
    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/store"
        android:title="@string/store"
        android:onClick="goToStore"/>
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        android:onClick="goToSettings"/>

</menu>