<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.spindie.profile.ProfileFragment"
        android:label="/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.spindie.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spindie.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.spindie.store.StoreFragment"
        android:label="@string/store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.spindie.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>